--- a/package.json
+++ b/package.json
@@ -2,40 +2,32 @@
   "name": "simplest-redux-example",
   "version": "0.0.0",
   "description": "simplest redux + react example",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "browserify --debug --extension=js -o src/bundle.js src/index.js && http-server -p 8080"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jackielii/simplest-redux-example.git"
+    "start": " webpack-dev-server --inline --hot --content-base src/ --history-api-fallback"
   },
   "keywords": [
     "redux",
     "react"
   ],
-  "author": "Jackie Li",
+  "author": "Linda",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jackielii/simplest-redux-example/issues"
-  },
-  "browserify": {
-    "transform": [
-      [ "babelify", { "presets": ["es2015", "react"] } ]
-    ]
-  },
   "homepage": "https://github.com/jackielii/simplest-redux-example#readme",
   "dependencies": {
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
+    "react-router": "^2.0.0",
     "redux": "^3.5.2"
   },
   "devDependencies": {
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
-    "http-server": "^0.9.0"
+    "http-server": "^0.8.5",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.16.3"
   }
 }
